[package]
name = "nmea_capture"
version = "0.1.0"
edition = "2024"
default-run = "nmea_capture"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }


# DDS
dust_dds = "0.12.0"
windows-sys = { version = "0.52.0", features = ["Win32_Networking_WinSock"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
